k8s/apps/security/authelia/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: authelia
  namespace: security
spec:
  hosts:
    - 'auth.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: authelia.security.svc.cluster.local
          weight: 100
